<resources>
    <string name="app_name">Lesson11_AccessContent</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">读取联系人数据</string>
    <string name="name">姓名</string>
    <string name="num">电话号码</string>
    <string name="add">添加</string>
    <string name="show">显示所有联系人</string>
    <string name="hint">输入联系人姓名或号码</string>
    <string name="personid">ID号</string>
    <string name="personname">姓名</string>
    <string name="personnum">手机号</string>
</resources>
